<resources>
    <string name="app_name">BMI Calculator</string>

    <string name="normal_range_bmi">(Normal range is 18.5 – 24.9)</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>

    <!-- Display Unit -->
    <string name="kg">Kg</string>
    <string name="cm">cm</string>
    <string name="pounds">pounds (lbs)</string>
    <string name="feet">feet</string>
    <string name="inch">in</string>

    <string name="calculate">Calculate</string>
    <string name="zero_value">0</string>

    <!-- Display Result -->
    <string name="Underweight">Underweight</string>
    <string name="Healthy">Healthy</string>
    <string name="Overweight">Overweight</string>
    <string name="Obese">Obese</string>

    <!-- Validate Input -->
    <string name="WeightIsEmpty">Weight is empty.</string>
    <string name="HighIsEmpty">Height is empty.</string>
    <string name="WightHighIsEmpty">Please fill in all the values.</string>
    <string name="ProbablyIncorrectValues">Probably you gave incorrect values.</string>
    <string name="CheckYourValues">Please check again your Weight or Height, something does not look good.</string>
</resources>