<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/swipe_unit"
        android:layout_width="@dimen/swipe_units"
        android:layout_height="@dimen/swipe_units"
        android:layout_marginTop="@dimen/small_margin_x"
        android:layout_marginEnd="@dimen/small_margin_x"
        android:background="?selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_outline_swap_circle_24"
        tools:ignore="ContentDescription" />

    <androidx.cardview.widget.CardView
        android:id="@+id/weight_cv"
        android:layout_width="@dimen/large_width"
        android:layout_height="@dimen/large_height"
        android:layout_marginTop="@dimen/xlarge_margin_x"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/medium_corner_radius"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/weight_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/medium_margin_x"
                android:text="@string/weight"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/small_text_size_x"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/weight_et"
                android:layout_width="@dimen/small_width"
                android:layout_height="@dimen/small_height"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/medium_margin_y"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/zero_value"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight_tv" />

            <TextView
                android:id="@+id/weight_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:text="@string/kg"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/small_text_size_x"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/weight_et" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/height_cv"
        android:layout_width="@dimen/large_width"
        android:layout_height="@dimen/large_height"
        android:layout_marginTop="@dimen/xlarge_margin_x"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/medium_corner_radius"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_cv">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/height_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/medium_margin_x"
                android:text="@string/height"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/small_text_size_x"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/height_et"
                android:layout_width="@dimen/small_width"
                android:layout_height="@dimen/small_height"
                android:layout_marginStart="@dimen/large_margin"
                android:layout_marginTop="@dimen/medium_margin_y"
                android:ems="10"
                android:hint="@string/zero_value"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height_tv" />


            <TextView
                android:id="@+id/height_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:text="@string/cm"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/small_text_size_x"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/height_et" />


            <EditText
                android:id="@+id/height_et_inch"
                android:layout_width="@dimen/small_width"
                android:layout_height="@dimen/small_height"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:hint="@string/zero_value"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/white"
                android:textColorHint="@color/text_hint"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/height_unit"
                app:layout_constraintTop_toBottomOf="@+id/height_tv" />

            <TextView
                android:id="@+id/height_unit_inch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginBottom="@dimen/medium_margin"
                android:text="@string/inch"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/small_text_size_x"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/height_et_inch" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="@dimen/medium_width"
        android:layout_height="@dimen/small_height"
        android:layout_marginTop="@dimen/large_margin_x"
        android:backgroundTint="@color/calculate_btn"
        android:elevation="20dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        app:cornerRadius="@dimen/small_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/height_cv" />

    <androidx.cardview.widget.CardView
        android:id="@+id/result_cv"
        android:layout_width="@dimen/large_width"
        android:layout_height="@dimen/large_height_x"
        android:layout_marginTop="@dimen/large_margin_x"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/medium_corner_radius"
        app:cardElevation="15dp"
        app:cardMaxElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/index_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size_x"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/result_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/medium_text_size_x"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/small_text_size"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>